[package]
name = "reimagined-octo-train"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
fuse_mt = "0.6.1"
itertools = "0.13.0"
libc = "0.2.159"
magic = "0.16.2"
time = "0.3.36"
tracing = { version = "0.1", features = ["log"]}
tracing-log = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2.5"
walkdir = "2.5.0"
